회원가입 api 수정(스웨거포함)
